--- a/vertical-align.css
+++ b/vertical-align.css
@@ -1,3 +1,12 @@
+/*
+
+usage:
+1) add this in your css
+2) insert the class vertical-align in the containing row (or div) of the divs you want to align
+
+*/
+
+
 @media (min-width: 768px) { 
     .vertical-align {
         display: flex;
